# manga_classifier-Comic-or-Photo-images-

./: .gitignore  CMakeLists.txt  README.MD  manga_classifier.cpp
